--- a/src/public/calendar.html
+++ b/src/public/calendar.html
@@ -7,7 +7,7 @@
     <title>School Calendar - St Francis Secondary School</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
     <style>
         body {
             background-color: #f8f9fa;
@@ -80,7 +80,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/bag.png" alt="St Francis Secondary School Logo" height="50" class="me-2">
+                <img src="/images/bag.png" alt="St Francis Secondary School Logo" height="50" class="me-2">
                 <span>St Francis Secondary School</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
