--- a/src/public/registration.html
+++ b/src/public/registration.html
@@ -7,7 +7,7 @@
     <title>Student Registration - St Francis Secondary School</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="images/bag.png" alt="St Francis Secondary School Logo" height="50" class="me-2">
+                <img src="/images/bag.png" alt="St Francis Secondary School Logo" height="50" class="me-2">
                 <span>St Francis Secondary School</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -116,18 +116,20 @@
                                 <div class="col-md-6">
                                     <label for="firstName" class="form-label">First Name</label>
                                     <input type="text" class="form-control" id="firstName" name="firstName" required>
+                                    <div class="invalid-feedback">Please enter first name</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="lastName" class="form-label">Last Name</label>
                                     <input type="text" class="form-control" id="lastName" name="lastName" required>
+                                    <div class="invalid-feedback">Please enter last name</div>
                                 </div>
                             </div>
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="dateOfBirth" class="form-label">Date of Birth</label>
-                                    <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth"
-                                        required>
+                                    <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth" required>
+                                    <div class="invalid-feedback">Please select date of birth</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="gender" class="form-label">Gender</label>
@@ -136,51 +138,61 @@
                                         <option value="male">Male</option>
                                         <option value="female">Female</option>
                                     </select>
+                                    <div class="invalid-feedback">Please select gender</div>
                                 </div>
-                            </div>
-
-                            <div class="mb-3">
-                                <label for="photo" class="form-label">Student Photo</label>
-                                <input type="file" class="form-control" id="photo" name="photo" accept="image/*"
-                                    required>
                             </div>
 
                             <!-- Academic Information -->
                             <h4 class="mb-3 mt-4">Academic Information</h4>
                             <div class="row mb-3">
                                 <div class="col-md-6">
-                                    <label for="admissionNumber" class="form-label">Admission Number</label>
-                                    <input type="text" class="form-control" id="admissionNumber" name="admissionNumber"
-                                        required>
+                                    <label for="registrationNumber" class="form-label">Registration Number</label>
+                                    <input type="text" class="form-control" id="registrationNumber" name="registrationNumber" required>
+                                    <div class="invalid-feedback">Please enter registration number</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="class" class="form-label">Class</label>
                                     <select class="form-select" id="class" name="class" required>
                                         <option value="">Select Class</option>
-                                        <option value="form1">Form 1</option>
-                                        <option value="form2">Form 2</option>
-                                        <option value="form3">Form 3</option>
-                                        <option value="form4">Form 4</option>
+                                        <option value="Form 1">Form 1</option>
+                                        <option value="Form 2">Form 2</option>
+                                        <option value="Form 3">Form 3</option>
+                                        <option value="Form 4">Form 4</option>
                                     </select>
+                                    <div class="invalid-feedback">Please select class</div>
                                 </div>
                             </div>
 
-                            <!-- Contact Information -->
+                            <div class="mb-3">
+                                <label for="stream" class="form-label">Stream</label>
+                                <select class="form-select" id="stream" name="stream" required>
+                                    <option value="">Select Stream</option>
+                                    <option value="A">A</option>
+                                    <option value="B">B</option>
+                                    <option value="C">C</option>
+                                </select>
+                                <div class="invalid-feedback">Please select stream</div>
+                            </div>
+
+                            <!-- Parent/Guardian Information -->
                             <h4 class="mb-3 mt-4">Parent/Guardian Information</h4>
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="parentName" class="form-label">Parent/Guardian Name</label>
                                     <input type="text" class="form-control" id="parentName" name="parentName" required>
+                                    <div class="invalid-feedback">Please enter parent/guardian name</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="parentPhone" class="form-label">Phone Number</label>
                                     <input type="tel" class="form-control" id="parentPhone" name="parentPhone" required>
+                                    <div class="invalid-feedback">Please enter phone number</div>
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <label for="parentEmail" class="form-label">Email Address</label>
                                 <input type="email" class="form-control" id="parentEmail" name="parentEmail">
+                                <div class="invalid-feedback">Please enter a valid email address</div>
                             </div>
 
                             <div class="mb-3">
@@ -250,8 +262,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/registration.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/registration.js"></script>
 </body>
 
 </html>
