Updated files, removed unused HTML/CSS/JS, added src and logs directories

--- a/src/public/contact.html
+++ b/src/public/contact.html
@@ -101,7 +101,7 @@
                         <a class="nav-link" href="registration-card.html">Registration Card</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="admin-login.html">Admin Portal</a>
