--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-header">
-                <img src="../../images/logo.png" alt="School Logo" class="logo">
+                <img src="../public/images/bag.png" alt="School Logo" class="logo">
                 <h1>School Portal</h1>
                 <p>Welcome back! Please login to your account</p>
             </div>
@@ -40,10 +40,7 @@
                         <i class="fas fa-user-tag"></i>
                         <select id="role" name="role" required>
                             <option value="student">Student</option>
-<<<<<<< HEAD
-=======
                             <option value="admin">Admin</option>
->>>>>>> 403b044 (Updated files, removed unused HTML/CSS/JS, added src and logs directories)
                             <option value="parent">Parent</option>
                         </select>
                     </div>
