--- a/src/auth/register.html
+++ b/src/auth/register.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-header">
-                <img src="../../images/logo.png" alt="School Logo" class="logo">
+                <img src="../public/images/bag.png" alt="School Logo" class="logo">
                 <h1>Create Account</h1>
                 <p>Join our school community</p>
             </div>
