--- a/src/public/student/dashboard.html
+++ b/src/public/student/dashboard.html
@@ -229,7 +229,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <img src="/images/bag.png" alt="School Logo">
+            <img src="../images/bag.png" alt="School Logo">
             <h5>Student Portal</h5>
         </div>
         <div class="sidebar-menu">
