--- a/src/auth/forgot-password.html
+++ b/src/auth/forgot-password.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-header">
-                <img src="../../images/logo.png" alt="School Logo" class="logo">
+                <img src="../public/images/bag.png" alt="School Logo" class="logo">
                 <h1>Forgot Password</h1>
                 <p>Enter your email to reset your password</p>
             </div>
