--- a/src/auth/reset-password.html
+++ b/src/auth/reset-password.html
@@ -11,7 +11,7 @@
     <div class="auth-container">
         <div class="auth-box">
             <div class="auth-header">
-                <img src="../../images/logo.png" alt="School Logo" class="logo">
+                <img src="../public/images/bag.png" alt="School Logo" class="logo">
                 <h1>Reset Password</h1>
                 <p>Create a new password for your account</p>
             </div>
