--- a/src/public/login.html
+++ b/src/public/login.html
@@ -176,7 +176,7 @@
                     if (role === 'admin') {
                         window.location.href = '/index.html';
                     } else if (role === 'student') {
-                        window.location.href = '/student/dashboard';
+                        window.location.href = '/student/dashboard.html';
                     }
                 } else {
                     errorMessage.textContent = data.message || 'Login failed';
