--- a/src/student/dashboard.html
+++ b/src/student/dashboard.html
@@ -101,6 +101,31 @@
                     <p class="text-muted mb-0">Here's what's happening in your academic journey</p>
                 </div>
 
+                <!-- Student Information Card -->
+                <div class="card border-0 shadow-sm mb-4">
+                    <div class="card-header bg-light fw-semibold">Student Information</div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <p><strong>Name:</strong> <span id="studentName"></span></p>
+                                <p><strong>Admission Number:</strong> <span id="admissionNumber"></span></p>
+                                <p><strong>Class:</strong> <span id="studentClass"></span></p>
+                                <p><strong>Stream:</strong> <span id="studentStream"></span></p>
+                                <p><strong>Gender:</strong> <span id="studentGender"></span></p>
+                                <p><strong>Date of Birth:</strong> <span id="studentDOB"></span></p>
+                            </div>
+                            <div class="col-md-6">
+                                <p><strong>Parent/Guardian:</strong> <span id="parentName"></span></p>
+                                <p><strong>Parent Phone:</strong> <span id="parentPhone"></span></p>
+                                <p><strong>Parent Email:</strong> <span id="parentEmail"></span></p>
+                                <p><strong>Address:</strong> <span id="studentAddress"></span></p>
+                                <p><strong>Previous School:</strong> <span id="previousSchool"></span></p>
+                                <p><strong>Last Grade:</strong> <span id="lastGrade"></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Quick Stats -->
                 <div class="row g-4 mb-4 quick-stats">
                     <div class="col-lg-4 col-md-6">
